<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorMain"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/const_padding"
        android:text="@string/music"
        android:textColor="@color/white"
        android:textSize="@dimen/main_header_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/const_padding"
        android:text="@string/made_for_you"
        android:textColor="@color/white"
        android:textSize="@dimen/small_header_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/const_padding"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1.5"
            android:layout_width="@dimen/main_item_size"
            android:layout_height="@dimen/main_item_size"
            app:cardCornerRadius="@dimen/cornerRadius">

            <ImageView
                android:id="@+id/ivPlaylist1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/testimage" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="@dimen/zeroDpDimens"
            android:layout_height="@dimen/zeroDpDimens"
            android:layout_weight="1"/>


        <androidx.cardview.widget.CardView
            android:layout_weight="1.5"
            android:layout_width="@dimen/main_item_size"
            android:layout_height="@dimen/main_item_size"
            app:cardCornerRadius="@dimen/cornerRadius">

            <ImageView
                android:id="@+id/ivPlaylist2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/testimage" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <TextView
        android:text="@string/music_by_genre"
        android:textColor="@color/white"
        android:textSize="@dimen/small_header_size"
        android:paddingLeft="@dimen/const_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/const_padding"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1.5"
            android:layout_width="@dimen/main_item_size"
            android:layout_height="@dimen/smaller_rectangle_height"
            app:cardCornerRadius="@dimen/cornerRadius">

            <ImageView
                android:id="@+id/ivGenre1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/testimage" />

            <TextView
                android:id="@+id/tvGenre1"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_header_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="@dimen/zeroDpDimens"
            android:layout_height="@dimen/zeroDpDimens"
            android:layout_weight="1"/>


        <androidx.cardview.widget.CardView
            android:layout_weight="1.5"
            android:layout_width="@dimen/main_item_size"
            android:layout_height="@dimen/smaller_rectangle_height"
            app:cardCornerRadius="@dimen/cornerRadius">

            <ImageView
                android:id="@+id/ivGenre2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/testimage" />

            <TextView
                android:id="@+id/tvGenre2"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/small_header_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



</LinearLayout>